@@ -30,7 +30,7 @@
 #include "PlatformString.h"
 #if ENABLE(ORIENTATION_EVENTS)
 #include "qorientationsensor.h"
-#if !(defined(HAVE_QT5) && HAVE_QT5)
+#if QT_VERSION < QT_VERSION_CHECK(5, 0, 0)
 using QTM_NAMESPACE::QOrientationSensor;
 #endif
 #endif // ENABLE(ORIENTATION_EVENTS).
