@@ -23,7 +23,7 @@
 
 #include "qwebkitglobal.h"
 #include "qwebpage.h"
-#if defined(HAVE_QT5) && HAVE_QT5
+#if QT_VERSION >= QT_VERSION_CHECK(5, 0, 0)
 #include <QtWidgets/qwidget.h>
 #else
 #include <QtGui/qwidget.h>
